tests/suite/fail/regression/fuzz/fuzz_garbage_10.ny
fn main() { let x = @10 } //~ ERROR
